find_package(LibXml2)
if (LIBXML2_FOUND)
  add_subdirectory(ProjectGenerator)
endif()

include(FindPkgConfig)
pkg_check_modules(OpenCV opencv)
find_package(OpenGL)
find_package(GLUT)
find_package(SDL)
if (OpenCV_FOUND AND OPENGL_FOUND AND GLUT_FOUND AND SDL_FOUND)
  add_subdirectory(sdlsim)
endif()
