add_subdirectory(ProjectGenerator)

include(FindPkgConfig)
pkg_check_modules(OpenCV opencv)
find_package(OpenGL)
find_package(GLUT)
find_package(SDL)
if (OpenCV_FOUND AND OPENGL_FOUND AND GLUT_FOUND AND SDL_FOUND)
  add_subdirectory(simulator)
  add_subdirectory(viewer)
  add_subdirectory(monitor)
endif()
